--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^8.3.0"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
